--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
-Ignore Mac DS_Store files
-.DS_Store
+# Ignore Mac DS_Store files
+/map/Lilac12k/.DS_Store
+/.DS_Store
+
+# Ignore Xcode user data
+/map/Lilac12k.xcodeproj/project.xcworkspace/xcuserdata
+/map/Lilac12k.xcodeproj/xcuserdata
