added the new map view to info, changed the working of why our app would like to use the users location in the pop up. Fixed the track so it didn't have that random dot and added mile markers. Oh and changed the look and wording in map

--- a/map/Lilac12k/Info.plist
+++ b/map/Lilac12k/Info.plist
@@ -73,7 +73,7 @@
 		</dict>
 	</dict>
 	<key>NSLocationAlwaysUsageDescription</key>
-	<string>Lilac12k wants to track your run</string>
+	<string>Lilac12k will use your location to give detailed results after the race</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Lilac12k wants to track your run</string>
 	<key>UIBackgroundModes</key>
